--- a/home.html
+++ b/home.html
@@ -1,8 +1,14 @@
 <header>
-  <h1>Stark Demo Pages</h1>
+  <h1><a href="/index.html">Stark Demo Pages</a></h1>
 </header>
 <section>
-  <a href="/about.html" class="stark-slide-in">About</a>
+  <nav>
+    <ul>
+      <li>
+        <a href="/about.html" class="stark-slide-in">About</a>
+      </li>
+    </ul>
+  </nav>
 </section>
 <footer>
   &copy; 2011 Hubert Łępicki
