--- a/home.html
+++ b/home.html
@@ -7,10 +7,9 @@
       <li>
         <a href="/about.html" class="stark-slide-in">About</a>
       </li>
+      <li>
+        <a href="/forms.html" class="stark-slide-in">Forms</a>
+      </li>
     </ul>
   </nav>
 </section>
-<footer>
-  &copy; 2011 Hubert Łępicki
-</footer>
-
