--- a/forms.html
+++ b/forms.html
@@ -1,8 +1,8 @@
 <header>
   <a href="/home.html" class="stark-slide-out stark-button stark-back-button">Back</a>
-  <h1>About</h1>
+  <h1>Forms</h1>
 </header>
 <section>
-  Stark is mobile HTML5, CSS3 and Zepto.js experimental framework by Hubert Łępicki.
+  
 </section>
 
