--- a/forms.html
+++ b/forms.html
@@ -3,6 +3,33 @@
   <h1>Forms</h1>
 </header>
 <section>
-  
+  <p>
+    <label for="text">Text input</label>
+    <input type="text" id="text" />
+  </p>
+  <p>
+    <label for="password">Password</label>
+    <input type="password" id="password" />
+  </p>
+  <p>
+    <input type="checkbox" id="checkbox" />
+    <label for="checkbox">Checkbox</label>
+  </p>
+  <p>
+    <input type="radio" id="radio" checked="checked" name="radio" />
+    <label for="radio">Radio 1</label>
+    <br/>
+    <input type="radio" id="radio2" name="radio" />
+    <label for="radio2">Radio 2</label>
+  </p>
+  <p>
+    <label for="textarea">Long text input</label>
+    <br/>
+    <textarea></textarea>
+  </p>
+  <p>
+    <input type="submit" class="stark-button" value="Submit">
+  </p>
+
 </section>
 
