handling get and post forms done

--- a/home.html
+++ b/home.html
@@ -8,7 +8,10 @@
         <a href="/about.html" class="stark-slide-in">About</a>
       </li>
       <li>
-        <a href="/forms.html" class="stark-slide-in">Forms</a>
+        <a href="/forms.html" class="stark-slide-in">Forms inputs</a>
+      </li>
+      <li>
+        <a href="/form_submits.html" class="stark-slide-in">Forms submits</a>
       </li>
     </ul>
   </nav>
